# delegation

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  release.toml
.github/workflows/: audit.yml  ci.yml
benches/: delegate.rs
codegen/: Cargo.toml  README.md  release.toml
codegen/src/: derive.rs  lib.rs  macro_path.rs  util.rs
codegen/src/impl_for/: mod.rs  util.rs  utils.rs
codegen/src/impl_trait/: mod.rs  util.rs  utils.rs
codegen/tests/: derives_trait.rs  enum_generic_param.rs  enum_lifetimes.rs  errors.rs  external_traits.rs  external_types.rs  fail.rs  generics_in_methods.rs  impls_for.rs  methods_lifetimes.rs  multiple_bounds.rs  scope_consistent.rs  sealed_external_traits.rs  trait_and_type_generic_param.rs  trait_default_method_impls.rs  trait_generic_param.rs  trait_lifetimes.rs  traits_with_same_name.rs  type_generic_param.rs  unsafe.rs
codegen/tests/errors/: expr_in_generic_params.rs  expr_in_generic_params.stderr  external_trait_as_local.stderr  external_trait_without_argument.stderr  external_trait_without_attr.rs  external_trait_without_attr.stderr  external_trait_wrong_declaration.stderr  external_type_without_attr.rs  external_type_without_conversion.rs  external_type_without_conversion.stderr  newtype_inner_not_impls_trait.stderr  no_trait_attr.rs  no_trait_attr.stderr  not_allowed_associated_constants.rs  not_allowed_macro_in_trait_definition.stderr  not_allowed_typed_receivers.rs  not_allowed_typed_receivers.stderr  not_supported_associated_types.rs  not_supported_associated_types.stderr  struct_with_multiple_fields.stderr  to_be_early_bounded_lifetimes.rs  to_be_early_bounded_lifetimes.stderr  wrong_argument.rs  wrong_argument.stderr  wrong_generics.stderr
codegen/tests/fail/: mod.rs
codegen/tests/fail/delegate/: duplicate_generics_parameters.rs  duplicate_generics_parameters.stderr  enum_variant_not_impls_trait.rs  enum_variant_not_impls_trait.stderr  expr_in_generic_params.rs  expr_in_generic_params.stderr  external_trait_as_local.rs  external_trait_as_local.stderr  external_trait_without_argument.rs  external_trait_without_argument.stderr  external_trait_without_attr.rs  external_trait_without_attr.stderr  external_trait_wrong_declaration.rs  external_trait_wrong_declaration.stderr  external_type_without_attr.rs  external_type_without_attr.stderr  external_type_without_conversion.rs  external_type_without_conversion.stderr  local_trait_as_external.rs  local_trait_as_external.stderr  newtype_inner_not_impls_trait.rs  newtype_inner_not_impls_trait.stderr  no_trait_attr.rs  no_trait_attr.stderr  not_allowed_associated_constants.rs  not_allowed_associated_constants.stderr  not_allowed_macro_in_trait_definition.rs  not_allowed_macro_in_trait_definition.stderr  not_allowed_typed_receivers.rs  not_allowed_typed_receivers.stderr  not_supported_associated_types.rs  not_supported_associated_types.stderr  struct_with_multiple_fields.rs  struct_with_multiple_fields.stderr  to_be_early_bounded_lifetimes.rs  to_be_early_bounded_lifetimes.stderr  variant_with_multiple_fields.rs  variant_with_multiple_fields.stderr  where_clause_without_generics.rs  where_clause_without_generics.stderr  (+4 more)
examples/: basic.rs
src/: lib.rs  macros.rs  private.rs
