[workspace]
members = [".", "codegen"]

[package]
name = "delegation"
version = "0.0.0"
edition = "2021"
rust-version = "1.83"
description = "Macro-based delegation for enums and structs."
authors = [
    "Kai Ren <tyranron@gmail.com>",
    "Mikhail Bashilov <m.bashilov.srg@gmail.com>",
]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/delegation"
homepage = "https://github.com/arcane-rs/delegation"
repository = "https://github.com/arcane-rs/delegation"
readme = "README.md"
include = ["/src/", "/LICENSE-APACHE", "/LICENSE-MIT", "/README.md"]
keywords = ["performance", "traits", "enum", "optimization", "macro"]
categories = ["rust-patterns"]

[dependencies]
codegen = { package = "delegation-codegen", path = "codegen" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "delegate"
harness = false
