[package]
name = "delegation"
version = "0.4.0"
edition = "2024"
rust-version = "1.86"
description = "Macro-based delegation for enums and structs."
license = "MIT OR Apache-2.0"
authors = [
    "Mikhail Bashilov <m.bashilov.srg@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/delegation"
homepage = "https://github.com/arcane-rs/delegation"
repository = "https://github.com/arcane-rs/delegation"
readme = "README.md"
categories = ["rust-patterns"]
keywords = ["delegate", "delegation", "dispatch", "enum", "optimization"]
include = ["/benches/", "/src/", "CHANGELOG.md", "/LICENSE-APACHE", "/LICENSE-MIT", "/README.md"]

[dependencies]
codegen = { version = "=0.4.0", package = "delegation-codegen", path = "codegen" }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }

# TODO: Remove once `criterion` is upgraded.
# Not really used, for surviving `minimal-versions` check only.
regex = { version = "1.6", default-features = false }

[[bench]]
name = "delegate"
harness = false

[workspace]
members = [".", "codegen"]
