[package]
name = "delegation-codegen"
version = "0.0.0"
edition = "2021"
rust-version = "1.83"
authors = [
    "Kai Ren <tyranron@gmail.com>",
    "Mikhail Bashilov <m.bashilov.srg@gmail.com>",
]
license = "MIT OR Apache-2.0"
description = "Code generation for `delegation` crate"
documentation = "https://docs.rs/delegation"
homepage = "https://github.com/arcane-rs/delegation"
repository = "https://github.com/arcane-rs/delegation"
readme = "README.md"
keywords = ["performance", "traits", "enum", "optimization", "macro"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
itertools = { version = "0.14", default-features = false }
proc-macro2 = { version = "1.0", default-features = false, features = ["span-locations"] }
proc-macro-crate = { version = "3.2", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["clone-impls", "extra-traits", "full", "parsing", "printing", "proc-macro", "visit", "visit-mut"] }

[dev-dependencies]
delegation = { path = ".." }
trybuild = { version = "1.0", default-features = false }
